# EmployeeAccountingSystem

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
apps/workers/: urls.py  views.py
config/: settings.py  urls.py
