[tool.poetry]
name = "system"
version = "0.0.0"
description = ""
authors = ["ye11ow_banana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
loguru = "^0.6.0"
psycopg2 = "^2.9.5"
python-decouple = "^3.8"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
